<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.edival.recioxpenses.ui.viewModel.TodayViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilStartCapital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                android:hint="@string/hint_start_capital"
                android:maxLength="10"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStartCapital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    app:textDecimal="@{viewModel.currentWorkDay.startCapital}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFinalCapital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                android:hint="@string/hint_final_capital"
                android:maxLength="10"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFinalCapital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.currentWorkDay.startCapital > 0}"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    app:textDecimal="@{viewModel.currentWorkDay.finalCapital}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilExpenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                android:hint="@string/hint_expenses_capital"
                android:maxLength="10"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etExpenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.currentWorkDay.finalCapital > 0}"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    app:textDecimal="@{viewModel.currentWorkDay.expenses}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                android:enabled="@{viewModel.currentWorkDay.expenses > 0}"
                android:text="@string/today_btn_save"
                app:icon="@drawable/ic_save" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                android:text="@string/today_status_new"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:statusTodayMsg="@{viewModel.currentWorkDay.status}" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgStatus"
                android:layout_width="@dimen/today_status_img_size"
                android:layout_height="@dimen/today_status_img_size"
                android:layout_margin="@dimen/common_padding_default"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_history_toggle_off"
                app:statusTodayImage="@{viewModel.currentWorkDay.status}" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                app:inProgressVisibility="@{viewModel.inProgress}" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>